--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </nav>
     <section id="content">
         <figure>
-            <video autoplay loop muted playsinline>
+            <video autoplay loop muted playsinline poster="Journey/img/media/Calc.jpg">
                 <source src="Journey/img/media/CalC_2.mp4" type="video/mp4">
-                <img src="Journey/img/media/Calc.jpg" alt="Ætheria Calendar" style="width:768px;height:768px;">
+                Your browser does not support the video tag.
             </video>
             <figcaption><strong>Tesla Cycles</strong>. Clockwork Contraption. Universal Harmonizer. Cosmic Cycles and Calendric Systems.</figcaption>
         </figure>
